[gd_scene load_steps=6 format=3 uid="uid://dkfhutt3ggkt0"]

[ext_resource type="Texture2D" uid="uid://ca3ko8guggvn3" path="res://Assets/Sprites/UI/Notification/Notification_bubble.png" id="1_gt8ya"]
[ext_resource type="Script" path="res://Components/UI/Notification/Notification.gd" id="1_u7xr2"]
[ext_resource type="Texture2D" uid="uid://dq1oi70jhh5re" path="res://Assets/Sprites/UI/Potions/Cyan_potion__small_pixel.png" id="3_raloi"]
[ext_resource type="Texture2D" uid="uid://b8n4abmnobdrj" path="res://Assets/Sprites/UI/Notification/sparkles_green.png" id="4_4dr4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlisx"]
size = Vector2(155.5, 108)

[node name="Notification" type="Node2D"]
position = Vector2(0, 0.124031)
script = ExtResource("1_u7xr2")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(4, 2.62499)
scale = Vector2(0.824841, 0.85828)
texture = ExtResource("1_gt8ya")

[node name="Potion" type="Sprite2D" parent="."]
position = Vector2(-13, -8.12403)
scale = Vector2(0.869565, 0.869565)
texture = ExtResource("3_raloi")

[node name="Sparkles" type="Sprite2D" parent="."]
position = Vector2(32, -10)
scale = Vector2(0.375, 0.375)
texture = ExtResource("4_4dr4k")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.764706, 0.666667, 1)
offset_left = -40.0
offset_top = 20.0
offset_right = 47.0
offset_bottom = 28.0
value = 50.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.75, -16)
shape = SubResource("RectangleShape2D_nlisx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
